# TokamakPhysics

./: .gitignore  CMakeLists.txt
d3dapp/: raddude.cpp
documentation/reference/: neanimatedbody.htm  negeometry.htm  nejoint.htm  nerigidbody.htm
include/: tokamak.h  tokamak_ext.h
include/math/: ne_debug.h  ne_math.h  ne_math_m3_inline.h  ne_math_m4_inline.h  ne_math_misc_inline.h  ne_math_q_inline.h  ne_math_t3_inline.h  ne_math_v2_inline.h  ne_math_v3_inline.h  ne_math_v4_inline.h  ne_smath.h  ne_type.h
tokamaksrc/: CMakeLists.txt
tokamaksrc/src/: boxcylinder.cpp  collision.cpp  collision.h  collision2.h  collisionbody.cpp  constraint.cpp  constraint.h  containers.h  cylinder.cpp  dcd.cpp  dcd.h  lines.cpp  message.h  ne_interface.cpp  perflinux.cpp  perflinux.h  perfwin32.cpp  perfwin32.h  region.cpp  restcontact.cpp  rigidbody.cpp  rigidbody.h  rigidbodybase.cpp  scenery.cpp  scenery.h  simulator.cpp  simulator.h  solver.cpp  sphere.cpp  stack.cpp  stack.h  tricollision.cpp  useopcode.cpp
